sdk-docs_versioned_docs/version-22.0.x/enums/Generated/Types/IdentityTx/IdentityTx.md
---
id: "IdentityTx"
title: "Enumeration: IdentityTx"
sidebar_label: "IdentityTx"
---

[generated/types](../../../../modules/Generated/Types/Types.md).IdentityTx

## Enumeration Members

### AcceptPrimaryKey

• **AcceptPrimaryKey** = ``"identity.acceptPrimaryKey"``

#### Defined in

[generated/types.ts:305](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L305)

___

### AddAuthorization

• **AddAuthorization** = ``"identity.addAuthorization"``

#### Defined in

[generated/types.ts:315](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L315)

___

### AddClaim

• **AddClaim** = ``"identity.addClaim"``

#### Defined in

[generated/types.ts:309](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L309)

___

### AddInvestorUniquenessClaim

• **AddInvestorUniquenessClaim** = ``"identity.addInvestorUniquenessClaim"``

#### Defined in

[generated/types.ts:318](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L318)

___

### AddInvestorUniquenessClaimV2

• **AddInvestorUniquenessClaimV2** = ``"identity.addInvestorUniquenessClaimV2"``

#### Defined in

[generated/types.ts:321](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L321)

___

### AddSecondaryKeysWithAuthorization

• **AddSecondaryKeysWithAuthorization** = ``"identity.addSecondaryKeysWithAuthorization"``

#### Defined in

[generated/types.ts:317](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L317)

___

### AddSecondaryKeysWithAuthorizationOld

• **AddSecondaryKeysWithAuthorizationOld** = ``"identity.addSecondaryKeysWithAuthorizationOld"``

#### Defined in

[generated/types.ts:326](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L326)

___

### CddRegisterDid

• **CddRegisterDid** = ``"identity.cddRegisterDid"``

#### Defined in

[generated/types.ts:302](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L302)

___

### CddRegisterDidWithCdd

• **CddRegisterDidWithCdd** = ``"identity.cddRegisterDidWithCdd"``

#### Defined in

[generated/types.ts:329](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L329)

___

### ChangeCddRequirementForMkRotation

• **ChangeCddRequirementForMkRotation** = ``"identity.changeCddRequirementForMkRotation"``

#### Defined in

[generated/types.ts:306](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L306)

___

### CreateChildIdentities

• **CreateChildIdentities** = ``"identity.createChildIdentities"``

#### Defined in

[generated/types.ts:331](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L331)

___

### CreateChildIdentity

• **CreateChildIdentity** = ``"identity.createChildIdentity"``

#### Defined in

[generated/types.ts:330](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L330)

___

### FreezeSecondaryKeys

• **FreezeSecondaryKeys** = ``"identity.freezeSecondaryKeys"``

#### Defined in

[generated/types.ts:313](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L313)

___

### GcAddCddClaim

• **GcAddCddClaim** = ``"identity.gcAddCddClaim"``

#### Defined in

[generated/types.ts:319](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L319)

___

### GcRevokeCddClaim

• **GcRevokeCddClaim** = ``"identity.gcRevokeCddClaim"``

#### Defined in

[generated/types.ts:320](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L320)

___

### InvalidateCddClaims

• **InvalidateCddClaims** = ``"identity.invalidateCddClaims"``

#### Defined in

[generated/types.ts:303](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L303)

___

### JoinIdentityAsKey

• **JoinIdentityAsKey** = ``"identity.joinIdentityAsKey"``

#### Defined in

[generated/types.ts:307](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L307)

___

### LeaveIdentityAsKey

• **LeaveIdentityAsKey** = ``"identity.leaveIdentityAsKey"``

#### Defined in

[generated/types.ts:308](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L308)

___

### LegacySetPermissionToSigner

• **LegacySetPermissionToSigner** = ``"identity.legacySetPermissionToSigner"``

#### Defined in

[generated/types.ts:312](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L312)

___

### PlaceholderLegacySetPermissionToSigner

• **PlaceholderLegacySetPermissionToSigner** = ``"identity.placeholderLegacySetPermissionToSigner"``

#### Defined in

[generated/types.ts:325](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L325)

___

### RegisterCustomClaimType

• **RegisterCustomClaimType** = ``"identity.registerCustomClaimType"``

#### Defined in

[generated/types.ts:328](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L328)

___

### RemoveAuthorization

• **RemoveAuthorization** = ``"identity.removeAuthorization"``

#### Defined in

[generated/types.ts:316](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L316)

___

### RemoveSecondaryKeys

• **RemoveSecondaryKeys** = ``"identity.removeSecondaryKeys"``

#### Defined in

[generated/types.ts:304](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L304)

___

### RemoveSecondaryKeysOld

• **RemoveSecondaryKeysOld** = ``"identity.removeSecondaryKeysOld"``

#### Defined in

[generated/types.ts:324](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L324)

___

### RevokeClaim

• **RevokeClaim** = ``"identity.revokeClaim"``

#### Defined in

[generated/types.ts:310](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L310)

___

### RevokeClaimByIndex

• **RevokeClaimByIndex** = ``"identity.revokeClaimByIndex"``

#### Defined in

[generated/types.ts:322](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L322)

___

### RotatePrimaryKeyToSecondary

• **RotatePrimaryKeyToSecondary** = ``"identity.rotatePrimaryKeyToSecondary"``

#### Defined in

[generated/types.ts:323](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L323)

___

### SetPermissionToSigner

• **SetPermissionToSigner** = ``"identity.setPermissionToSigner"``

#### Defined in

[generated/types.ts:311](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L311)

___

### SetSecondaryKeyPermissions

• **SetSecondaryKeyPermissions** = ``"identity.setSecondaryKeyPermissions"``

#### Defined in

[generated/types.ts:327](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L327)

___

### UnfreezeSecondaryKeys

• **UnfreezeSecondaryKeys** = ``"identity.unfreezeSecondaryKeys"``

#### Defined in

[generated/types.ts:314](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L314)

___

### UnlinkChildIdentity

• **UnlinkChildIdentity** = ``"identity.unlinkChildIdentity"``

#### Defined in

[generated/types.ts:332](https://github.com/PolymeshAssociation/polymesh-sdk/blob/2d3ac2aea/src/generated/types.ts#L332)
